
src_utils = files(
    'bit_reader_utils.c',
    'bit_writer_utils.c',
    'color_cache_utils.c',
    'filters_utils.c',
    'huffman_encode_utils.c',
    'huffman_utils.c',
    'quant_levels_dec_utils.c',
    'quant_levels_utils.c',
    'random_utils.c',
    'rescaler_utils.c',
    'thread_utils.c',
    'utils.c',
)
